--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,48 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.txxia.myapplication">
+    package="com.txxia.demos">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
+        android:name=".App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/AppTheme"
-        tools:ignore="UnusedAttribute">
+        android:theme="@style/AppTheme">
 
-        <meta-data android:name="MOBILE_CHANNEL" android:value="test" />
-
-        <!-- 需要添加到新apk -->
         <activity
-            android:name="com.okex.SplashNoPrivacyActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name="com.txxia.demos.launcher.MainActivity"
+            android:label="Android Hook Demos"
+            android:enabled="true"
+            android:icon="@mipmap/ic_launcher"
+            android:roundIcon="@mipmap/ic_launcher"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.okex.OkCheSplashActivity"/>
-        <activity android:name="com.okex.PrivacyActivity"/>
-        <activity android:name="com.okex.UserProtocolActivity"/>
-        <activity android:name="com.okex.WebActivity"/>
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="com.txxia.myapplication.okexfileProvider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/okex_file_paths" />
-        </provider>
-        <!-- 需要添加到新apk -->
+
+        <activity
+            android:name="com.txxia.demos.launcher.MainActivityAlias"
+            android:label="DemosAH">
+        </activity>
+        <!-- name不能个tagrgetActivity得值不能相同，否则安装会有问题，小米手机提示用户拒绝 -->
+        <activity-alias
+            android:name="com.txxia.demos.launcher.MainActivity1"
+            android:targetActivity="com.txxia.demos.launcher.MainActivityAlias"
+            android:label="Hooked Launcher"
+            android:enabled="false"
+            android:icon="@mipmap/ic_launcher_hook"
+            android:roundIcon="@mipmap/ic_launcher_hook_round"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity-alias>
+
+        <activity
+            android:name="com.txxia.demos.signaturehook.SignatureHookActivity"
+            android:theme="@style/AppTheme"
+            android:label="签名Hook"/>
     </application>
 
 </manifest>
